--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,9 @@ jupyterlab==3.6.3
 tiktoken==0.4.0
 faiss-cpu==1.7.3
 openai==0.27.4
+firebase==4.0.1
+pydantic==1.10.7
+joblib==1.2.0
+beautifulsoup4==4.12.2
+lxml==4.9.2
+orgparse==0.3.2
